<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="20dp">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/identity"
                android:textColor="@android:color/darker_gray"
                android:textStyle="bold"
                android:layout_marginBottom="10dp"/>

            <TextView
                android:id="@+id/usuario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Fernando Contreras"/>
            <TextView
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="fcontreras@auger.org.ar"/>
            <TextView
                android:id="@+id/token"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="jdfklsdjlkfsdlakfjsldkajflksdajflksdjlkfsdfklddddddsjdlfkjsdlkafjlksajdfljlñlasjdflñjalsdf"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/notifications_and_sounds"
                android:textColor="@android:color/darker_gray"
                android:textStyle="bold"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"/>
            <android.support.v7.widget.SwitchCompat
                android:id="@+id/notification"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/show_notifications" />
            <android.support.v7.widget.SwitchCompat
                android:id="@+id/sound"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sounds" />
            <android.support.v7.widget.SwitchCompat
                android:id="@+id/vibrate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/vibrate" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/monitoring"
                android:textColor="@android:color/darker_gray"
                android:textStyle="bold"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"/>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recyclerConfig"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            </android.support.v7.widget.RecyclerView>


        </LinearLayout>
</android.support.v4.widget.NestedScrollView>